--- a/Pipfile
+++ b/Pipfile
@@ -15,9 +15,13 @@ pytest = "==3.10.0"
 requests-iap = "==0.2.0"
 python-helpscout-v2 = "==1.0.1"
 algoliasearch = ">=2.0,<3.0"
+alibabacloud-tea-util = "*"
+alibabacloud-opensearch-util = "*"
+alibabacloud-credentials = "*"
 
 [dev-packages]
 pylint = "==2.3.1"
+autopep8 = "*"
 
 [requires]
 python_version = "3.6"
